chore(atomic): migrate atomic-commerce-pager to lit
https://coveord.atlassian.net/browse/KIT-3936

--- a/packages/atomic/dev/examples/commerce-website/search.html
+++ b/packages/atomic/dev/examples/commerce-website/search.html
@@ -139,10 +139,11 @@
                 <atomic-commerce-no-products></atomic-commerce-no-products>
               </atomic-layout-section>
               <atomic-layout-section section="pagination">
-                <atomic-commerce-load-more-products></atomic-commerce-load-more-products>
+                <!-- <atomic-commerce-load-more-products></atomic-commerce-load-more-products> -->
                 <!-- Alternative pagination
                 <atomic-commerce-pager></atomic-commerce-pager>
                 -->
+                <atomic-commerce-pager number-of-pages="-1"></atomic-commerce-pager>
               </atomic-layout-section>
             </atomic-layout-section>
           </atomic-commerce-layout>
