--- a/packages/atomic/dev/index.html
+++ b/packages/atomic/dev/index.html
@@ -377,6 +377,7 @@
           </atomic-layout-section>
           <atomic-layout-section section="pagination">
             <atomic-load-more-results></atomic-load-more-results>
+            <atomic-pager></atomic-pager>
             <!-- Alternative pagination
               <atomic-pager></atomic-pager>
               <atomic-results-per-page></atomic-results-per-page>
