--- a/packages/atomic/dev/examples/commerce-website/search.html
+++ b/packages/atomic/dev/examples/commerce-website/search.html
@@ -6,10 +6,11 @@
     <title>Search</title>
 
     <script type="module">
+      import {AtomicCommercePager} from '@coveo/atomic/components';
       import {defineCustomElements} from '@coveo/atomic/loader';
       import '@coveo/atomic/themes/coveo.css';
 
-      defineCustomElements();
+      // defineCustomElements();
     </script>
 
     <script type="module">
