--- a/packages/atomic/dev/examples/commerce-website/search.html
+++ b/packages/atomic/dev/examples/commerce-website/search.html
@@ -6,11 +6,10 @@
     <title>Search</title>
 
     <script type="module">
-      import {AtomicCommercePager} from '@coveo/atomic/components';
       import {defineCustomElements} from '@coveo/atomic/loader';
       import '@coveo/atomic/themes/coveo.css';
 
-      // defineCustomElements();
+      defineCustomElements();
     </script>
 
     <script type="module">
@@ -140,11 +139,10 @@
                 <atomic-commerce-no-products></atomic-commerce-no-products>
               </atomic-layout-section>
               <atomic-layout-section section="pagination">
-                <!-- <atomic-commerce-load-more-products></atomic-commerce-load-more-products> -->
+                <atomic-commerce-load-more-products></atomic-commerce-load-more-products>
                 <!-- Alternative pagination
                 <atomic-commerce-pager></atomic-commerce-pager>
                 -->
-                <atomic-commerce-pager number-of-pages="-1"></atomic-commerce-pager>
               </atomic-layout-section>
             </atomic-layout-section>
           </atomic-commerce-layout>
